# slm-agentic-recommendation

./: README.md  main.py  pyproject.toml
notebooks/: 1_data_exploration.ipynb  2_data_selection.ipynb  3_base_agent.ipynb  4_collaborative_recommendation.ipynb  4_x_collaborative_recommendation_loop.ipynb
